# rOSt

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  test_disk.img  x86_64-custom.json
.cargo/: config.toml
.github/: CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: label-project.yml  rust-clippy.yml  rust-pr.yml  rust.yml  todo.yml
boot/: Cargo.toml
boot/src/: main.rs
drivers/ata/: Cargo.toml
drivers/ata/src/: array_combiner.rs  ata.rs  bus.rs  constants.rs  debug.rs  descriptor.rs  disk.rs  disk_descriptor.rs  lib.rs  partition.rs  partition_descriptor.rs
drivers/vga/: Cargo.toml
drivers/vga/src/: lib.rs  pixel_buffer.rs  static_stack.rs  vga.rs  vga_buffer.rs  vga_color.rs  vga_core.rs  vga_device.rs
internal_utils/: Cargo.toml
internal_utils/src/: lib.rs  port_extensions.rs  structures.rs
internal_utils/src/structures/: driver.rs  kernel_information.rs
kernel/: Cargo.toml
kernel/src/: debug.rs  init.rs  interrupts.rs  kernel.rs  lib.rs  logger.rs  memory.rs  processes.rs  structures.rs  syscalls.rs  user_mode.rs
kernel/src/interrupts/: cpu_handlers.rs  gdt.rs  interrupt_register.rs  pic.rs  pic_handlers.rs  syscall_name.rs  syscalls.rs
kernel/src/interrupts/cpu_handlers/: double_fault.rs  general_protection_fault.rs  non_maskable_interrupt.rs  page_fault.rs
kernel/src/interrupts/pic_handlers/: addresses.rs  ata.rs  keyboard.rs  timer.rs
kernel/src/memory/: frame_allocator.rs  heap.rs  memory_init.rs  page_table.rs
kernel/src/processes/: dispatcher.rs  memory_mapper.rs  process.rs  registers_state.rs  scheduler.rs  thread.rs
kernel/src/structures/: kernel_information.rs  port_extensions.rs
kernel/src/syscalls/: system_call.rs
kernel/src/test_framework/: serial.rs
lib/: Cargo.toml
lib/src/: ext2.rs  lib.rs
lib/src/ext2/: blockgroup_descriptor_table.rs  directory_entry.rs  inode.rs  operations.rs  superblock.rs
os_core/: Cargo.toml
os_core/src/: logger.rs  memory.rs  os_core.rs  test_framework.rs
os_core/src/interrupts/: gdt.rs  interrupt_register.rs
os_core/src/interrupts/cpu_handlers/: breakpoint.rs  page_fault.rs
os_core/src/interrupts/pic_handlers/: keyboard.rs
os_core/src/memory/: allocator.rs  heap.rs  page_table.rs
os_core/src/structures/: driver.rs  kernel_information.rs  static_stack.rs
os_core/src/test_framework/: qemu_exit.rs  serial.rs  test_runner.rs  testable.rs
os_core/src/test_framework/ansi_colors/: green.rs  red.rs  yellow.rs
rost-lib/: Cargo.toml
rost-lib/src/: lib.rs  syscall_name.rs  thread_utils.rs
src/: basic_drivers.rs  interrupts.rs  lib.rs  logger.rs  low_level.rs  main.rs  memory.rs  offsets.rs  os.rs  os_core.rs  panic_handler.rs  structures.rs  test_framework.rs  tests.rs  vga.rs  vga_buffer.rs
src/assets/: rost-logo.tga
src/basic_drivers/: ata.rs
src/basic_drivers/ata/: bus.rs
src/basic_drivers/vga/: vga_buffer.rs  vga_color.rs
src/interrupts/: cpu_handlers.rs  gdt.rs  gtd.rs  handlers.rs  interrupt_register.rs  pic.rs  pic_handlers.rs  register.rs
src/interrupts/cpu_handlers/: breakpoint.rs  double_fault.rs
src/interrupts/handlers/: breakpoint.rs
src/interrupts/pic_handlers/: addresses.rs  ata.rs  keyboard.rs  timer.rs
src/low_level/: commands.rs  offsets.rs
src/structures/: port_extensions.rs  static_stack.rs
src/test_framework/: ansi_colors.rs  qemu_exit.rs  serial.rs  test_runner.rs  testable.rs
src/test_framework/ansi_colors/: red.rs
src/tests/: qemu_exit.rs  test_runner.rs  trivial_test.rs
src/vga/: point_2d.rs  text.rs  text_buffer.rs  vga_buffer.rs  vga_color.rs  vga_core.rs  vga_point.rs
src/vga/text/: color.rs  color_code.rs  cursor_mode.rs  interface.rs  screen_char.rs  text_buffer.rs  writer.rs
src/vga/text_buffer/: color_code.rs  screen_char.rs  text_buffer_struct.rs  writer.rs
test_framework/: Cargo.toml
test_framework/src/: lib.rs  test_runner.rs  testable.rs
tests/: README.md  boot_ok.rs  empty.rs  illegal_cursor_position.rs  interrupts.rs  invalid_vga_text_area.rs  page_fault.rs  print_logger_text.rs  print_vga_text.rs  stack_overflow.rs  trivial_test.rs
utils/: Cargo.toml
utils/src/: array_combiner.rs  byte_reader.rs  constants.rs  lib.rs  phys_addr_conversion.rs  port_extensions.rs  serial.rs  static_stack.rs  syscall_name.rs  utils.rs
