[package]
name = "os"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "os"
path = "src/os.rs"

[workspace]
members = [
    "utils",
    "boot",
    "kernel",
    "drivers/ata",
    "drivers/vga",
    "lib"
]

[package.metadata.bootloader]
map-physical-memory = true

[dependencies]
utils = { path = "utils"}
kernel = { path = "kernel" }
vga = { path = "drivers/vga" }
ata = { path = "drivers/ata" }
lib = { path = "lib" }
bootloader = "0.10.12"
volatile = "0.4.4" # volatile wrapper to prevent aggressive compiler optimizations
spin = "0.9.2" # spinlock implementation
x86_64 = "0.14.9" # configures the serial port, cpu exception table

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

###################################
# Register all failing tests here #
###################################
