cargo-features = ["workspace-inheritance"]

[package]
name = "os"
version = "0.1.0"
edition = { workspace=true }

[package.metadata.bootloader]
map-physical-memory = true

[dependencies]
utils = { workspace=true }
kernel = { workspace=true }
vga = { workspace=true }
ata = { workspace=true }
rost-lib = { workspace=true }
test_framework = { workspace=true }
bootloader = { workspace=true }
tinytga = { workspace=true }


[profile.release]
lto = true
codegen-units = 1
incremental = false

[workspace]
members = [
    "utils",
    "boot",
    "kernel",
    "drivers/ata",
    "drivers/vga",
    "rost-lib",
    "test_framework"
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
utils = { path = "utils"}
kernel = { path = "kernel" }
vga = { path = "drivers/vga" }
ata = { path = "drivers/ata" }
rost-lib = { path = "rost-lib" }
test_framework = { path = "test_framework" }
bitflags = "1.3"
bootloader = "0.10.12"
pic8259 = "0.10.2" # interrupt controller
noto-sans-mono-bitmap = { version = "0.1.5", features = ["size_14"] } # nice bitmap font
pc-keyboard = "0.5.1" # keyboard scan code converter
linked_list_allocator = "0.9.1" # allocator implementation
volatile = "0.4.4" # volatile wrapper to prevent aggressive compiler optimizations
spin = "0.9.3" # spinlock implementation
x86_64 = "0.14.9" # configures the serial port, cpu exception table
tinytga = "0.4.1" # for loading the OS logo
uart_16550 = "0.2.18" # serial port interface used for sending debug output to the host
lazy_static = { version = "1.4.0", features = [ "spin_no_std" ]}

###################################
# Register all failing tests here #
###################################
