cargo-features = ["workspace-inheritance"]

[package]
name = "kernel"
version = "0.1.0"
edition = { workspace=true }

[dependencies]
utils = { workspace=true }
test_framework = { workspace=true }
bootloader = { workspace=true }
spin = { workspace=true }
x86_64 = { workspace=true }
uart_16550 = { workspace=true }
pic8259 = { workspace=true }
pc-keyboard = { workspace=true }
linked_list_allocator = { workspace=true }
lazy_static = { workspace=true }
