[package]
name = "os_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "os_core"
path = "src/os_core.rs"

[dependencies]
bootloader = "0.10.12"
spin = "0.9.2" # spinlock implementation
x86_64 = "0.14.9" # configures the serial port, cpu exception table
uart_16550 = "0.2.17" # serial port interface used for sending debug output to the host
pic8259 = "0.10.2" # interrupt controller
pc-keyboard = "0.5.1" # keyboard scan code converter
linked_list_allocator = "0.9.1" # allocator implementation

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]