[package]
name = "ata"
version = "0.1.0"
edition = "2021"

[lib]
name = "ata"
path = "src/ata.rs"

[dependencies]
utils = { path = "../../utils"}
kernel = { path = "../../kernel" }
test_framework = { path = "../../test_framework" }
x86_64 = "0.14.9"
spin = "0.9.2"
bitflags = "1.3"
lazy_static = { version = "1.4.0", features = [ "spin_no_std" ]}
