cargo-features = ["workspace-inheritance"]

[package]
name = "ata"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { workspace=true }
kernel = { workspace=true }
test_framework = { workspace=true }
x86_64 = { workspace=true }
spin = { workspace=true }
bitflags = { workspace=true }
lazy_static = { workspace=true }
