[package]
name = "vga"
version = "0.1.0"
edition = "2021"

[lib]
name = "vga"
path = "src/vga.rs"

[dependencies]
os_core = { path = "../../os_core" }
noto-sans-mono-bitmap = "0.1.5" # nice bitmap font
spin = "0.9.2" # spinlock implementation

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]